# Lexicon

./: .gitignore  README.md  config.example.json  env.example  example_usage.py  pyproject.toml  setup_ollama.md
scripts/: analyze_labels.py  normalize_tags.py
src/lexicon/: __init__.py  __main__.py  api_client.py  app.py  cli.py  file_utils.py  label_system.py  labeler.py  train.py
